# timetracking

./: Cargo.toml  Makefile  README.md  example.csv
src/: analyze.rs  main.rs  model.rs  render.rs
