[package]
name = "timetracking"
version = "0.0.2"
edition = "2018"

authors = ["Kris Hardy <kris@rkrishardy.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "~0.4.19", features = ["serde"] }
clap = "~2.33.0"
csv = "~1.1.6"
fern = "~0.6.0"
log = "~0.4.14"
serde = { version = "~1.0.130", features = ["derive"] }
git-version = "~0.3.5"
