[package]
name = "timetracking"
version = "1.0.2"
edition = "2018"

authors = ["Kris Hardy <kris@rkrishardy.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "~0.4.19", features = ["serde"] }
clap = { version = "~3.1.17", features = ["cargo"] }
csv = "~1.1.6"
fern = "~0.6.1"
log = "~0.4.17"
serde = { version = "~1.0.137", features = ["derive"] }
git-version = "~0.3.5"
